added profile drop down to nav bar

--- a/css/index.css
+++ b/css/index.css
@@ -116,14 +116,60 @@ justify-content: center;
 transform: scale(1.05);
 }
 
-button {
+#sellbutton {
+  position: absolute;
   background-color: yellow;
   color: #000;
   border: none;
   border-radius: 20px;
-  margin-top: 30px;
   padding: 10px;
+  padding-right: 20px;
+  padding-left:20px;
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
+  margin-left: 650px;
+
+  
+}
+
+.profile-container {
+  position: absolute;
+  display: inline-block;
+  margin-left: 800px; 
+  margin-top: 23px;
+}
+
+.profile-icon {
+width: 40px;
+height: 40px;
+border-radius: 50%;
+cursor: pointer;
+}
+
+
+.dropdown {
+  display: none;
+  position: absolute;
+  right: 0;
+  background: #333333;
+  border-radius: 10px;
+  width: 250px;
+  padding: 10px;
+}
+
+.dropdown button {
+  width: 100%;
+  padding: 8px;
+  border: none;
+  background: none;
+  cursor: pointer;
+  text-align: left;
+  color: rgb(252, 252, 252);
+}
+
+.dropdown button:hover {
+  background: #474747;
+  color :  rgb(252, 252, 252 ); 
+  border-radius: 5px;
 }
