--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ body {
 
 .logo {
   position: absolute;
-  top: 20px;
+  top: 10px;
   left: 20px;
 }
 
@@ -84,14 +84,13 @@ nav ul li a {
 
 /* Listing container */
 .listing-container {
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-gap: 20px;
-margin-top: 500px;
-justify-content: center;
-padding-bottom: 10px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 columns */
+  gap: 20px; /* Space between items */
+  justify-content: center;
+  margin-top: 255px;
 }
+
 
 /* Listing card */
 .listing-card {
@@ -101,6 +100,7 @@ padding: 15px;
 width: 250px;
 text-align: center;
 justify-content: center;
+
 }
 
 /* Image Styling */
