Add functionality for signup, login.

--- a/css/index.css
+++ b/css/index.css
@@ -79,7 +79,8 @@ nav ul li a {
   font-size: 24px;
   font-weight: bold;
   height: 400px;
-  margin-top: 20px;
+  margin-top: 1000px;
+  color: #fff;
 }
 
 /* Listing container */
