--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -200,3 +200,39 @@ label{
     box-shadow: 0 0 5px rgba(255, 223, 0, 1);
   }
 }
+
+#preview-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-top: 10px;
+  justify-content: center;
+}
+
+.image-preview-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  background: #262626;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
+  width: 120px;
+}
+
+.preview-image {
+  width: 100px;
+  height: auto;
+  border-radius: 5px;
+}
+
+.preview-text {
+  font-size: 12px;
+  color: #fff;
+  text-align: center;
+  word-break: break-word;
+  max-width: 100px;
+}
+
+
